feat: Implement new universal interpolation system
- Add new InterpolationSystem with priority-based variable resolution (LOCAL > PARAMS > DATA > ENV)
- Add ScopeManager for stack-based local variable management
- Add InterpolationContext and InterpolationContextBuilder for unified context handling
- Update all actions to use new interpolation system with local scopes
- Update all functions to use new interpolation system with parameter passing
- Add synchronous function execution for string interpolation (JoinToString, Equals, ReadStorage)
- Remove old interpolation system (InterpolationEngine, utils/interpolation.ts)
- Add interpolation system documentation (EN/RU)
- Add comprehensive interpolation demo scenario
- Update demo project to showcase new interpolation features

BREAKING CHANGE: Old interpolation system removed - no backward compatibility

--- a/examples/scenarium-demo/package.json
+++ b/examples/scenarium-demo/package.json
@@ -16,13 +16,13 @@
   "author": "Scenarium Demo",
   "license": "MIT",
   "dependencies": {
-    "scenarium": "file:../scenarium/scenarium-0.1.0-beta.tgz",
-    "dotenv": "^17.2.2"
+    "dotenv": "^17.2.2",
+    "scenarium": "file:../../scenarium-0.1.0-beta.tgz"
   },
   "devDependencies": {
     "@types/node": "^20.0.0",
-    "typescript": "^5.0.0",
+    "nodemon": "^3.1.0",
     "ts-node": "^10.9.0",
-    "nodemon": "^3.1.0"
+    "typescript": "^5.0.0"
   }
 }
