--- a/package.json
+++ b/package.json
@@ -11,7 +11,9 @@
   "scripts": {
     "build": "tsc",
     "prepublishOnly": "npm run build",
-    "test": "echo \"No tests specified\" && exit 0"
+    "test": "jest",
+    "test:watch": "jest --watch",
+    "test:coverage": "jest --coverage"
   },
   "keywords": [
     "telegram",
@@ -38,8 +40,11 @@
     "node-telegram-bot-api": "^0.64.0"
   },
   "devDependencies": {
+    "@types/jest": "^30.0.0",
     "@types/node": "^20.0.0",
     "@types/node-telegram-bot-api": "^0.64.10",
+    "jest": "^30.1.3",
+    "ts-jest": "^29.4.1",
     "typescript": "^5.0.0"
   },
   "peerDependencies": {
