--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "scenarium",
-  "version": "0.1.0-beta",
+  "version": "0.1.1-alpha",
   "description": "TypeScript library for creating Telegram bots from JSON scenarios",
   "main": "dist/index.js",
   "types": "dist/index.d.ts",
