chore: Update package version to 0.1.2-alpha and set as latest
- Set version 0.1.2-alpha as latest tag in npm
- Remove alpha tag to simplify package distribution
- Add lock files for yarn and pnpm compatibility testing
- Update package.json with new version

--- a/package.json
+++ b/package.json
@@ -37,7 +37,8 @@
     "url": "https://github.com/naxila/scenarium/issues"
   },
   "dependencies": {
-    "node-telegram-bot-api": "^0.64.0"
+    "node-telegram-bot-api": "^0.64.0",
+    "scenarium": "0.1.2-alpha"
   },
   "devDependencies": {
     "@types/jest": "^30.0.0",
