docs: update interpolation documentation with new startParams and telegram variables
- Add startParams and telegram sections to docs/ru/interpolation.html and docs/en/interpolation.html
- Update priority system in docs/ru/interpolation-system.html and docs/en/interpolation-system.html
- Add examples of using new variables in onStartActions
- Fix startParams format: simple values now create {start: 'value'} instead of {value: true}
- Update tests for new startParams parser behavior

--- a/examples/scenarium-demo/package.json
+++ b/examples/scenarium-demo/package.json
@@ -17,7 +17,7 @@
   "license": "MIT",
   "dependencies": {
     "dotenv": "^17.2.2",
-    "scenarium": "file:../../scenarium-0.1.0-alpha.tgz"
+    "scenarium": "file:../../"
   },
   "devDependencies": {
     "@types/node": "^20.0.0",
