feat: Add RequestContactAction with contact request functionality
- Add RequestContactAction for requesting user phone numbers via Telegram
- Add onSuccess and onFailure callbacks for contact sharing
- Add updatePhone endpoint in trends-v2 backend
- Add phone field to User model
- Add contact message handler in TelegramAdapter
- Add documentation for RequestContactAction in Russian and English
- Remove debug logging and clean up code

--- a/package.json
+++ b/package.json
@@ -37,8 +37,7 @@
     "url": "https://github.com/naxila/scenarium/issues"
   },
   "dependencies": {
-    "node-telegram-bot-api": "^0.64.0",
-    "scenarium": "0.1.2-alpha"
+    "node-telegram-bot-api": "^0.64.0"
   },
   "devDependencies": {
     "@types/jest": "^30.0.0",
